Tweaked JVM options Fixed path invocations not properly picking isOthers